Replace Base64 decoder
#20400: Address all gaps to make C2S SoF and remove remaining UI items related to C2S from OCP